# rover_bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
config/: bridge.yaml
rover_bridge/: __init__.py  __main__.py  battery.py  bridge.py  cli.py  inference.py  logging_util.py  odometry.py  wire.py
rover_bridge/cameras/: __init__.py  base.py  oakd.py  picamera.py  preprocess.py  realsense.py
rover_bridge/control/: __init__.py  arc_steering.py  cmd_vel_publisher.py  waypoint_follower.py
rover_bridge/transports/: __init__.py  base.py  mqtt.py  uart.py
tools/: data_logger.py
